src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Addhar_Number__c</fullName>
        <label>Addhar Number</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admission_Date__c</fullName>
        <label>Admission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Back_Subject__c</fullName>
        <label>Back Subject</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EDC</fullName>
                </value>
                <value>
                    <fullName>DSA</fullName>
                </value>
                <value>
                    <fullName>Mechanics</fullName>
                </value>
                <value>
                    <fullName>Artificial intelligence</fullName>
                </value>
                <value>
                    <fullName>Environmental Studies</fullName>
                </value>
                <value>
                    <fullName>Engineering Physics</fullName>
                </value>
                <value>
                    <fullName>Antenna</fullName>
                </value>
                <value>
                    <fullName>Control System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone_NO__c</fullName>
        <label>Bank Phone NO.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agra</fullName>
                </value>
                <value>
                    <fullName>Bikaner</fullName>
                </value>
                <value>
                    <fullName>Ghaziabad</fullName>
                </value>
                <value>
                    <fullName>Jaipur</fullName>
                </value>
                <value>
                    <fullName>Jaisalmer</fullName>
                </value>
                <value>
                    <fullName>Jodhpur</fullName>
                </value>
                <value>
                    <fullName>Kanpur</fullName>
                </value>
                <value>
                    <fullName>Lucknow</fullName>
                </value>
                <value>
                    <fullName>Mumbai</fullName>
                </value>
                <value>
                    <fullName>Nagpur</fullName>
                </value>
                <value>
                    <fullName>Nashik</fullName>
                </value>
                <value>
                    <fullName>Pune</fullName>
                </value>
                <value>
                    <fullName>Udaipur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I Year</fullName>
                </value>
                <value>
                    <fullName>II Year</fullName>
                </value>
                <value>
                    <fullName>III Year</fullName>
                </value>
                <value>
                    <fullName>IV Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_No__c</fullName>
        <label>Contact No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Donation_Amount__c</fullName>
        <label>Donation Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Exam_Fees_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exam. Fees Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Father_Mobile_No__c</fullName>
        <label>Father Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fees_Summitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fees Summitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Location__c</fullName>
        <label>Home Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>III_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>III Sem Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>III_Sem_Percentage__c</fullName>
        <label>III Sem Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>II_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>II Sem Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>II_Sem_Percentage__c</fullName>
        <label>II Sem. Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IVSem_Percentage__c</fullName>
        <label>IVSem Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IV_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IV Sem Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_Sem_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I Sem Back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_Sem_Percentage__c</fullName>
        <label>I Sem. Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landline_Number__c</fullName>
        <label>Landline Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Overall_Grade__c</fullName>
        <label>Overall Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A++</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Exam_Fees__c</fullName>
        <label>Pending Exam Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Fees_Amount__c</fullName>
        <label>Pending Fees Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pending_Over_All_Amount__c</fullName>
        <label>Pending Over All Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resources__c</fullName>
        <label>Resources</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CS-A</fullName>
                </value>
                <value>
                    <fullName>CS-B</fullName>
                </value>
                <value>
                    <fullName>ME-A</fullName>
                </value>
                <value>
                    <fullName>ME-B</fullName>
                </value>
                <value>
                    <fullName>EC-A</fullName>
                </value>
                <value>
                    <fullName>EC-B</fullName>
                </value>
                <value>
                    <fullName>EE-A</fullName>
                </value>
                <value>
                    <fullName>EE-B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rajasthan</fullName>
                </value>
                <value>
                    <fullName>Maharashtra</fullName>
                </value>
                <value>
                    <fullName>UP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stream__c</fullName>
        <label>Stream</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>EC</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Contact_No__c</fullName>
        <label>Student Contact No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Student Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Shailendra Sharma</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Registrar_Layout</fullName>
        <active>true</active>
        <label>Registrar Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Teacher</fullName>
        <active>true</active>
        <label>Teacher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>